--- a/style.css
+++ b/style.css
@@ -1,32 +1,40 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
-
-body{
-    margin: 0;
-    padding: 0;
-    background-color: black;
-    font-family: 'Poppins', sans-serif;
+.tags{
+    border: 2px solid black;
+    line-height: 50px;
+    margin: 20px;
+    padding: 20px;
+}
+.tag{
+    padding: 10px;
+    margin: 10px;
+}
+.table{
+    border: 2px solid black;
+    width: 100%;
 }
 
-#mkp_img{
-    height: 80%;
-    width: 90%;
+
+
+:hover.box{
+box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
-#makeup_dt{
-    background-color: #485461;
-    background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
+
+
+.body{
+    background-color: pink;
 }
 
-#heading{
-    text-align: center;
-    color: white;
-    font-weight: bolder;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    opacity: 0.9;
+#image{
+    display: grid;
+    grid-template-columns: 35% 35% 35%;
+    grid-template-rows: 32%;
+    grid-gap: 10px;
 }
-#p_head{
-    text-align: center;
-    color: white;
-    opacity: 0.8;
-  
+.img{
+    width: 100%;
+}
+#img5{
+    grid-row: 2;
+    grid-column: 3;
 }
